Changed the title of game

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Melting Snowman Game</title>
+  <title>NotWordle</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <div class = "container">
-    <h1>Melting Snowman Game</h1> 
+    <h1>NotWordle</h1> 
     <div class = "Melting Snowman">
     </div>
     <div class = "word">
