--- a/browserExtension/popup.html
+++ b/browserExtension/popup.html
@@ -6,6 +6,10 @@
     <title>Document</title>
   </head>
 <body>
-  <h1>Hello World</h1>
+  <h1 id="test">Hello World</h1>
+  <p>Hello World 2.0</p>
+
+  <!-- javascript files -->
+  <script language="javascript" src="amazonScriptedGame.js"></script>
 </body>
 </html>
