Implemented TextBox input.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div class = "container">
     <h1>NotWordle</h1> 
+    <p>Instructions: Enter in the genre of Amazon product in the search bar.</p> 
     <div class = "Melting Snowman">
     </div>
     <div class = "word">
@@ -20,6 +21,10 @@
     <div class = "message">
       </div>
   </div>
+  <form action="javascript:submit()">
+    <textarea id="myTextArea"></textarea>
+    <input type="submit">
+  </form>
   <script src="script.js"></script>
 
   <!--
