Just the clothing part works!

--- a/game.html
+++ b/game.html
@@ -11,14 +11,21 @@
 <body>
   <div class = "container">
     <h1>NotWordle</h1> 
-    <p>Instructions: Pick the Amazon genre you like and type it in the text box.</p>
+    <p>Instructions: Yay! Lets play another game!</p> 
+    <div class = "Melting Snowman">
+    </div>
+    <div class = "word">
+      </div>
+    <div class = "letters">
+      </div>
+    <div class = "message">
+      </div>
+  </div>
   <form action="javascript:submit()">
     <textarea id="myTextArea"></textarea>
     <input type="submit">
   </form>
-  <p1 id = "feedback"></p1>
-  <input type="button" value="create page" onclick="change_page()"/>
-  <script src="homePage.js"></script>
+  <script src="script.js"></script>
 
   <!--
   This script places a badge on your repl's full-browser view back to your repl's cover
