--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
     <Div class="centered">
         <Div class="content">
+            <h2>Pick a game</h2>
             <form action="index.html">
                 <Button class="buttons">Hangman</Button>
             </form>
