--- a/index.html
+++ b/index.html
@@ -2,30 +2,28 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>NotWordle</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Homepage for our sunhacks 2023 project</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-  <div class = "container">
-    <h1>NotWordle</h1> 
-    <p>Instructions: Pick the Amazon genre you like and type it in the text box.</p>
-  <form action="javascript:submit()">
-    <textarea id="myTextArea"></textarea>
-    <input type="submit">
-  </form>
-  <p1 id = "feedback"></p1>
-  <input type="button" value="create page" onclick="change_page()"/>
-  <script src="homePage.js"></script>
-
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+    <Div class="centered">
+        <Div class="content">
+            <h2>Pick a game</h2>
+            <form action="game.html">
+                <Button class="buttons">Hangman</Button>
+            </form>
+            <form action="rps/RockPaperScissors.html">
+                <button class="buttons">Rock Paper Scissors</button>
+            </form>
+            <form action="amazonGuess.html">
+                <button class="buttons">Guess the category</button>
+            </form>
+            <form action="cipher/cipher.html">
+                <Button class="buttons">Solve the cipher</Button>
+            </form>
+        </Div>
+    </Div>
 </body>
 
 </html>
